src/test/deca/syntax/invalid/parser/int_decl_too_large.deca
// Description:
//   Test entier trop grand
//
// Resultats:
// Ligne <8> : Integer number too large

{
    int a = 3123432138;
}